Stopped using the aiohttp session for persisting the kg_name and submitter name for now
